--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Uses for Salary</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Uses for Salary</h1>
 
+    <!-- Ordered List for Shopping -->
+    <h2>Shopping List</h2>
+    <ol>
+        <li data-ns-test="shoppingList">Laptop</li>
+        <li data-ns-test="shoppingList">Smartphone</li>
+        <li data-ns-test="shoppingList">Headphones</li>
+    </ol>
+
+    <!-- Unordered List for Holiday Destinations -->
+    <h2>Holiday Destinations</h2>
+    <ul>
+        <li data-ns-test="holidayList">Bali, Indonesia</li>
+        <li data-ns-test="holidayList">Kyoto, Japan</li>
+        <li data-ns-test="holidayList">Santorini, Greece</li>
+    </ul>
 </body>
-
 </html>
